// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TemplateCard 스냅샷 > 기본 렌더링 구조가 유지됨 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small template-card  css-dev-only-do-not-override-p45i5k css-var-root"
  style="border-left-width: 4px; border-left-style: solid; border-left-color: #1677ff;"
>
  <div
    class="ant-card-body"
  >
    <div
      class="template-card-content"
    >
      <div
        class="template-card-header"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line css-dev-only-do-not-override-p45i5k css-var-root"
        >
          <strong>
            프레임워크 개발
          </strong>
        </span>
        <span
          aria-label="drag"
          class="anticon anticon-drag drag-handle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="drag"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-p45i5k ant-space-vertical !w-full css-var-root"
        style="column-gap: 2px; row-gap: 2px;"
      >
        <div
          class="ant-space-item"
        >
          <span
            class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line !text-xs css-dev-only-do-not-override-p45i5k css-var-root"
          >
            컴포넌트 구현
          </span>
        </div>
        <div
          class="ant-space-item"
        >
          <div>
            <span
              class="ant-tag ant-tag-filled ant-tag-green css-dev-only-do-not-override-p45i5k css-var-root"
            >
              개발
            </span>
            <span
              class="ant-tag ant-tag-filled !ml-xs css-dev-only-do-not-override-p45i5k css-var-root"
            >
              개발
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="ant-typography ant-typography-secondary !text-xs css-dev-only-do-not-override-p45i5k css-var-root"
          >
            A25_01234
          </span>
        </div>
      </div>
    </div>
    <style>
      
                .template-card {
                    margin-bottom: var(--spacing-sm);
                    transition: box-shadow 0.2s;
                }
                .template-card:hover {
                    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.12);
                }
                .template-card-dragging {
                    opacity: 0.5;
                    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
                }
                .template-card-content {
                    min-height: 60px;
                }
                .template-card-header {
                    display: flex;
                    align-items: center;
                    gap: var(--spacing-sm);
                    margin-bottom: var(--spacing-sm);
                }
                .template-icon {
                    font-size: var(--font-size-2xl);
                }
                .drag-handle {
                    margin-left: auto;
                    cursor: grab;
                    color: var(--color-text-disabled);
                }
                .drag-handle:hover {
                    color: var(--color-primary);
                }
            
    </style>
  </div>
  <ul
    class="ant-card-actions"
  >
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <button
          class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="play-circle"
              class="anticon anticon-play-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="play-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M719.4 499.1l-296.1-215A15.9 15.9 0 00398 297v430c0 13.1 14.8 20.5 25.3 12.9l296.1-215a15.9 15.9 0 000-25.8zm-257.6 134V390.9L628.5 512 461.8 633.1z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </li>
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <button
          class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="edit"
              class="anticon anticon-edit"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="edit"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </li>
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <button
          class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="delete"
              class="anticon anticon-delete"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="delete"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`TemplateCard 스냅샷 > 긴 텍스트 템플릿 구조가 유지됨 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small template-card  css-dev-only-do-not-override-p45i5k css-var-root"
  style="border-left-width: 4px; border-left-style: solid; border-left-color: #1677ff;"
>
  <div
    class="ant-card-body"
  >
    <div
      class="template-card-content"
    >
      <div
        class="template-card-header"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line css-dev-only-do-not-override-p45i5k css-var-root"
        >
          <strong>
            아주 긴 작업명이 들어가는 경우 테스트입니다
          </strong>
        </span>
        <span
          aria-label="drag"
          class="anticon anticon-drag drag-handle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="drag"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-p45i5k ant-space-vertical !w-full css-var-root"
        style="column-gap: 2px; row-gap: 2px;"
      >
        <div
          class="ant-space-item"
        >
          <span
            class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line !text-xs css-dev-only-do-not-override-p45i5k css-var-root"
          >
            아주 긴 거래명이 들어가서 줄바꿈이 필요한 경우
          </span>
        </div>
        <div
          class="ant-space-item"
        >
          <div>
            <span
              class="ant-tag ant-tag-filled ant-tag-green css-dev-only-do-not-override-p45i5k css-var-root"
            >
              개발
            </span>
            <span
              class="ant-tag ant-tag-filled !ml-xs css-dev-only-do-not-override-p45i5k css-var-root"
            >
              개발
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="ant-typography ant-typography-secondary !text-xs css-dev-only-do-not-override-p45i5k css-var-root"
          >
            A25_01234
          </span>
        </div>
      </div>
    </div>
    <style>
      
                .template-card {
                    margin-bottom: var(--spacing-sm);
                    transition: box-shadow 0.2s;
                }
                .template-card:hover {
                    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.12);
                }
                .template-card-dragging {
                    opacity: 0.5;
                    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
                }
                .template-card-content {
                    min-height: 60px;
                }
                .template-card-header {
                    display: flex;
                    align-items: center;
                    gap: var(--spacing-sm);
                    margin-bottom: var(--spacing-sm);
                }
                .template-icon {
                    font-size: var(--font-size-2xl);
                }
                .drag-handle {
                    margin-left: auto;
                    cursor: grab;
                    color: var(--color-text-disabled);
                }
                .drag-handle:hover {
                    color: var(--color-primary);
                }
            
    </style>
  </div>
  <ul
    class="ant-card-actions"
  >
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <button
          class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="play-circle"
              class="anticon anticon-play-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="play-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M719.4 499.1l-296.1-215A15.9 15.9 0 00398 297v430c0 13.1 14.8 20.5 25.3 12.9l296.1-215a15.9 15.9 0 000-25.8zm-257.6 134V390.9L628.5 512 461.8 633.1z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </li>
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <button
          class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="edit"
              class="anticon anticon-edit"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="edit"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </li>
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <button
          class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="delete"
              class="anticon anticon-delete"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="delete"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`TemplateCard 스냅샷 > 다른 색상 템플릿 구조가 유지됨 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small template-card  css-dev-only-do-not-override-p45i5k css-var-root"
  style="border-left-width: 4px; border-left-style: solid; border-left-color: #52c41a;"
>
  <div
    class="ant-card-body"
  >
    <div
      class="template-card-content"
    >
      <div
        class="template-card-header"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line css-dev-only-do-not-override-p45i5k css-var-root"
        >
          <strong>
            프레임워크 개발
          </strong>
        </span>
        <span
          aria-label="drag"
          class="anticon anticon-drag drag-handle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="drag"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-p45i5k ant-space-vertical !w-full css-var-root"
        style="column-gap: 2px; row-gap: 2px;"
      >
        <div
          class="ant-space-item"
        >
          <span
            class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line !text-xs css-dev-only-do-not-override-p45i5k css-var-root"
          >
            컴포넌트 구현
          </span>
        </div>
        <div
          class="ant-space-item"
        >
          <div>
            <span
              class="ant-tag ant-tag-filled ant-tag-green css-dev-only-do-not-override-p45i5k css-var-root"
            >
              개발
            </span>
            <span
              class="ant-tag ant-tag-filled !ml-xs css-dev-only-do-not-override-p45i5k css-var-root"
            >
              개발
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="ant-typography ant-typography-secondary !text-xs css-dev-only-do-not-override-p45i5k css-var-root"
          >
            A25_01234
          </span>
        </div>
      </div>
    </div>
    <style>
      
                .template-card {
                    margin-bottom: var(--spacing-sm);
                    transition: box-shadow 0.2s;
                }
                .template-card:hover {
                    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.12);
                }
                .template-card-dragging {
                    opacity: 0.5;
                    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
                }
                .template-card-content {
                    min-height: 60px;
                }
                .template-card-header {
                    display: flex;
                    align-items: center;
                    gap: var(--spacing-sm);
                    margin-bottom: var(--spacing-sm);
                }
                .template-icon {
                    font-size: var(--font-size-2xl);
                }
                .drag-handle {
                    margin-left: auto;
                    cursor: grab;
                    color: var(--color-text-disabled);
                }
                .drag-handle:hover {
                    color: var(--color-primary);
                }
            
    </style>
  </div>
  <ul
    class="ant-card-actions"
  >
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <button
          class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="play-circle"
              class="anticon anticon-play-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="play-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M719.4 499.1l-296.1-215A15.9 15.9 0 00398 297v430c0 13.1 14.8 20.5 25.3 12.9l296.1-215a15.9 15.9 0 000-25.8zm-257.6 134V390.9L628.5 512 461.8 633.1z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </li>
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <button
          class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="edit"
              class="anticon anticon-edit"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="edit"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </li>
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <button
          class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="delete"
              class="anticon anticon-delete"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="delete"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`TemplateCard 스냅샷 > 드래그 중 상태 구조가 유지됨 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small template-card template-card-dragging css-dev-only-do-not-override-p45i5k css-var-root"
  style="border-left-width: 4px; border-left-style: solid; border-left-color: #1677ff;"
>
  <div
    class="ant-card-body"
  >
    <div
      class="template-card-content"
    >
      <div
        class="template-card-header"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line css-dev-only-do-not-override-p45i5k css-var-root"
        >
          <strong>
            프레임워크 개발
          </strong>
        </span>
        <span
          aria-label="drag"
          class="anticon anticon-drag drag-handle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="drag"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-p45i5k ant-space-vertical !w-full css-var-root"
        style="column-gap: 2px; row-gap: 2px;"
      >
        <div
          class="ant-space-item"
        >
          <span
            class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line !text-xs css-dev-only-do-not-override-p45i5k css-var-root"
          >
            컴포넌트 구현
          </span>
        </div>
        <div
          class="ant-space-item"
        >
          <div>
            <span
              class="ant-tag ant-tag-filled ant-tag-green css-dev-only-do-not-override-p45i5k css-var-root"
            >
              개발
            </span>
            <span
              class="ant-tag ant-tag-filled !ml-xs css-dev-only-do-not-override-p45i5k css-var-root"
            >
              개발
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="ant-typography ant-typography-secondary !text-xs css-dev-only-do-not-override-p45i5k css-var-root"
          >
            A25_01234
          </span>
        </div>
      </div>
    </div>
    <style>
      
                .template-card {
                    margin-bottom: var(--spacing-sm);
                    transition: box-shadow 0.2s;
                }
                .template-card:hover {
                    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.12);
                }
                .template-card-dragging {
                    opacity: 0.5;
                    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
                }
                .template-card-content {
                    min-height: 60px;
                }
                .template-card-header {
                    display: flex;
                    align-items: center;
                    gap: var(--spacing-sm);
                    margin-bottom: var(--spacing-sm);
                }
                .template-icon {
                    font-size: var(--font-size-2xl);
                }
                .drag-handle {
                    margin-left: auto;
                    cursor: grab;
                    color: var(--color-text-disabled);
                }
                .drag-handle:hover {
                    color: var(--color-primary);
                }
            
    </style>
  </div>
  <ul
    class="ant-card-actions"
  >
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <button
          class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="play-circle"
              class="anticon anticon-play-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="play-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M719.4 499.1l-296.1-215A15.9 15.9 0 00398 297v430c0 13.1 14.8 20.5 25.3 12.9l296.1-215a15.9 15.9 0 000-25.8zm-257.6 134V390.9L628.5 512 461.8 633.1z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </li>
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <button
          class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="edit"
              class="anticon anticon-edit"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="edit"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </li>
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <button
          class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-icon-only"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="delete"
              class="anticon anticon-delete"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="delete"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </li>
  </ul>
</div>
`;
